Add feed endpoints
